# Eumenides

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  export_flagged_report.py  pyproject.toml  run_crawler.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/api/: controllers.py  schemas.py
backend/app/application/: __init__.py  dtos.py  use_cases.py
backend/app/domain/: entities.py  events.py  repositories.py  services.py  value_objects.py
backend/app/infra/: __init__.py  event_bus.py  export_adapter.py  sql_repository.py  telegram_client.py  telegram_user_search.py
backend/app/workers/: crawler.py
frontend/: Dockerfile  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  FlagCard.jsx
