[tool.poetry]
name = "eumenides-backend"
version = "0.1.0"
description = "Metadata-only detection backend for Eumenides"
authors = ["You <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras=["standard"], version="^0.23.0"}
sqlalchemy = {extras=["asyncio"], version="^2.0"}
asyncpg = "^0.27.0"
pydantic = "^1.10"
telethon = "^1.31.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
httpx = "^0.24.0"
cryptography = "^41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
